LITwillio/objects/Twilio_Auth_Information__mdt.object
<CustomObject>
    <description>Store auth credentials for Twilio</description>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <description>Twilio API Endpoint</description>
        <label>API Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SID__c</fullName>
        <description>This is twillio account Id. Login to Twillio to get this information.</description>
        <label>Account SID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <description>This is auth token for Twillio. Login to Twillio to get this information.</description>
        <label>Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <description>This Stores Endpoint URL for Twilio Functions</description>
        <label>Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orgwide_Twilio_Phone_Number__c</fullName>
        <description>This is Twilio number, from which all SMS will be sent. Login to Twilio to get this information.</description>
        <label>Orgwide Twilio Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Twilio Auth Information</label>
    <pluralLabel>Twilio Auth Informations</pluralLabel>
</CustomObject>